# Frix

./: ANTIGRAVITY_TESTING_PROMPT.md  AUDIT_QUICKFIX.md  FRONTEND_PLAN.md  README.md  T12_IMPLEMENTATION.md  T12_SUMMARY.md  WINNING_STRATEGY.md  api-contract.md  app-flow.md  backend_plan.md  cursorrules.md  implementation_plan.md  instructions.md  integration.md  karvaan-migration.md  skills-lock.json  walkthrough.md
backend/: Google-Antigravity-Hackathon-Challenges.txt  README.md  main.py  pyproject.toml  test_api.py  test_groq.py  test_multiple_keys.py  test_orchestrator.py  test_raw_gemini.py  test_workflow_direct.py
backend/app/: api.py  config.py  mock_data.py  runtime.py  schemas.py  tools.py
backend/app/main_agents/: booking.py  discovery.py  followup.py  intent.py  orchestrator.py  ranker.py
karvaan/: .cursorrules  .easignore  App.tsx  app.json  babel.config.js  eas.json  package-lock.json  package.json  ts_errors.txt  tsconfig.json  updateImports.js
karvaan/.maestro/: README.md  TICKET-045-README.md  config.yaml
karvaan/.maestro/flows/: 01-guest-cold-launch.yaml  02-guest-browsing.yaml  03-guest-soft-gate.yaml  04-guest-deep-link.yaml  05-auth-google-signin.yaml  06-auth-phone-otp.yaml  07-auth-returning-user.yaml
karvaan/android/: sentry.properties  settings.gradle
karvaan/android/app/: build.gradle
karvaan/assets/fonts/: README.md  download-fonts.ps1
karvaan/ios/: Podfile
karvaan/scripts/: generate-seed-from-json.js
karvaan/src/_archive/: README.md
karvaan/supabase/: MIGRATION-GUIDE.md  README.md  verify-setup.ps1  verify-setup.sh
(+90 files in other folders)
