[project]
name = "search"
version = "0.1.0"
description = "AI Service Orchestrator for the Informal Economy — multi-agent backend (OpenAI Agents SDK + FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.2.9",
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
]
[tool.fastapi]
entrypoint = "app.api:app"
